[package]
name = "vertx-http-gateway-rust-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.21.0"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
futures-channel = "0.3.30"
reqwest = { version = "0.12", features = ["native-tls-vendored", "default", "stream"]}
bytes = "1"
futures-util = "0.3.30"
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.3"

[lib]
crate-type = ["lib"]

[[example]]
name = "connector_test"
crate-type = ["bin"]
